<?xml version="1.0" encoding="utf-8"?>  
<LinearLayout  
  xmlns:android="http://schemas.android.com/apk/res/android"  
  android:orientation="vertical"  
  android:layout_width="fill_parent"  
  android:layout_height="fill_parent"  
  android:background="@drawable/bg">  
  <!-- padding 内边距   layout_margin 外边距   
                  android:layout_alignParentTop 布局的位置是否处于顶部 -->  
  <RelativeLayout  
          android:id="@+id/login_div"  
          android:layout_width="match_parent"  
          android:layout_height="match_parent"  
          android:padding="15dip"  
          android:layout_margin="15dip"  
          >  
       
          <TextView  
                  android:id="@+id/login_user_input"  
                  android:layout_width="wrap_content"  
                  android:layout_height="wrap_content"  
                  android:layout_marginRight="5dp"  
                  android:layout_marginTop="40dp"  
                  android:text="@string/login_label_username"  
                  style="@style/normalText"/> 
                  
          <EditText  
                  android:id="@+id/username_edit"  
                  android:layout_width="wrap_content"  
                  android:layout_height="wrap_content"  
                  android:layout_marginTop="40dp" 
                  android:layout_toRightOf="@+id/login_user_input"
                  android:hint="@string/login_username_hint"  
                  android:singleLine="true"  
                  android:layout_alignParentRight="true"
                  android:inputType="text"/>   
                  
          <TextView  
                  android:id="@+id/login_password_input"  
                  android:layout_width="wrap_content"  
                  android:layout_height="wrap_content"  
                  android:layout_marginTop="100dp" 
                  android:text="@string/login_label_password"  
                  android:layout_marginRight="5dp"
                  style="@style/normalText"/>    
                         
          <EditText  
                  android:id="@+id/password_edit"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="100dp" 
                  android:layout_toRightOf="@id/login_password_input"
                  android:layout_alignParentRight="true"
                  android:hint="@string/login_password_hint"  
                  android:singleLine="true"  
                  android:inputType="textPassword" /> 
                   
                                 <!-- 登录button -->
         <Button  
                  android:id="@+id/logino_button"  
                  android:layout_width="wrap_content"  
                  android:layout_height="wrap_content" 
                  android:layout_marginTop="200dp"
                  android:layout_alignRight="@id/password_edit"
                  android:text="@string/login_label_signin"  
                  android:background="@drawable/blue_button" />  
                        <!-- 注册button -->
        <Button  
                  android:id="@+id/register_button"  
                  android:layout_width="wrap_content"  
                  android:layout_height="wrap_content"
                  android:layout_marginTop="200dp"
                  android:layout_alignLeft="@id/login_password_input" 
                  android:text="@string/login_label_register"  
                  android:background="@drawable/blue_button"/>
        <Button  
                  android:id="@+id/anime_button"  
                  android:layout_width="wrap_content"  
                  android:layout_height="wrap_content"
                  android:layout_marginTop="300dp"
                  android:layout_alignLeft="@id/login_password_input" 
                  android:text="@string/login_label_anime"  
                  android:background="@drawable/blue_button"/>
     
  </RelativeLayout>  
  <RelativeLayout
                  android:id="@+id/layout_button"
                  android:padding="15dip"  
                  android:layout_margin="15dip"  
                  android:layout_width="match_parent"  
                  android:layout_height="match_parent" >

  </RelativeLayout>
</LinearLayout> 